--- a/src/app/@core/auth/mesa-datos/mesa-datos.component.html
+++ b/src/app/@core/auth/mesa-datos/mesa-datos.component.html
@@ -26,7 +26,7 @@
     </mat-form-field>
     <mat-form-field fxFlex="22"
                         appearance="outline"
-                        class="mg-bot-8"
+                        class="mat-sm"
                         color="primary">
             <mat-label>Numero Documento</mat-label>
                         <input matInput type="text"
@@ -55,7 +55,7 @@
     </mat-form-field>
     <mat-form-field fxFlex="25"
                         appearance="outline"
-                        class="mg-bot-8"
+                        class="mat-sm"
                         color="primary">
             <mat-label>Celular</mat-label>
                         <input matInput type="text"
@@ -69,7 +69,7 @@
         <mat-form-field fxFlex="100"
                         fxFlex.xs="auto"
                         appearance="outline"
-                        class="mg-bot-8"
+                        class="mat-sm"
                         color="primary">
             <mat-label>Nombre o razon social</mat-label>
             <input matInput type="text"
@@ -85,7 +85,7 @@
     <row-container>
     <mat-form-field fxFlex="33"
                     fxFlex.xs="auto"
-                    class="mg-bot-8"
+                    class="mat-sm"
                     appearance="outline"
                     color="primary">
         <mat-label>Tipo del Documento</mat-label>
@@ -98,7 +98,7 @@
     </mat-form-field>
     <mat-form-field fxFlex="33"
             fxFlex.xs="auto"
-            class="mg-bot-8"
+            class="mat-sm"
             appearance="outline"
             color="primary">
         <mat-label>Numero de Documento</mat-label>
@@ -112,7 +112,7 @@
     <mat-form-field fxFlex="33"
                         fxFlex.xs="auto"
                         appearance="outline"
-                        class="mg-bot-8"
+                        class="mat-sm"
                         color="primary">
                         <mat-label>Fecha Documento</mat-label>
                         <input matInput
@@ -128,7 +128,7 @@
         <mat-form-field fxFlex="33"
                         fxFlex.xs="auto"
                         appearance="outline"
-                        class="mg-bot-8"
+                        class="mat-sm"
                         color="primary">
             <mat-label>Nro de Paginas</mat-label>
             <input matInput
@@ -141,7 +141,7 @@
         <mat-form-field fxFlex="33"
                         fxFlex.xs="auto"
                         appearance="outline"
-                        class="mg-bot-8"
+                        class="mat-sm"
                         color="primary">
             <mat-label>Nro Expediente</mat-label>
             <input matInput
@@ -154,7 +154,7 @@
         <mat-form-field fxFlex="33"
                         fxFlex.xs="auto"
                         appearance="outline"
-                        class="mg-bot-8"
+                        class="mat-sm"
                         color="primary">
             <mat-label>Proceso</mat-label>
             <mat-select formControlName="codigoProceso">
