--- a/src/app/pages/tramite-documentario/area-filtro/area-filtro.component.html
+++ b/src/app/pages/tramite-documentario/area-filtro/area-filtro.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="example-chip-list" appearance="outline" fxFlex="100">
+<mat-form-field class="mat-sm example-chip-list" appearance="outline" fxFlex="100">
   <mat-label>{{ matLabel }}</mat-label>
   <mat-chip-listbox #chipList>
     <mat-chip-option
