--- a/src/app/pages/tramite-documentario/bandeja-buscar/bandeja-buscar.html
+++ b/src/app/pages/tramite-documentario/bandeja-buscar/bandeja-buscar.html
@@ -2,6 +2,7 @@
   <mat-form-field *ngIf="group.value=='filtrar'"
                   fxFlex
                   appearance="outline"
+                  class="mat-sm"
                   color="primary">
     <input matInput
            type="text"
