--- a/src/app/pages/tramite-documentario/bandeja-filtro/bandeja-filtro.component.html
+++ b/src/app/pages/tramite-documentario/bandeja-filtro/bandeja-filtro.component.html
@@ -10,7 +10,7 @@
   <mat-form-field
     fxFlex="22"
     fxFlex.xs="auto"
-    class="mg-bot-8"
+    class="mat-sm"
     appearance="outline"
     color="primary"
   >
@@ -33,6 +33,7 @@
     fxFlex.xs="auto"
     appearance="outline"
     color="primary"
+    class="mat-sm"
   >
     <mat-label>Bandeja</mat-label>
     <mat-select
