--- a/src/app/pages/tramite-documentario/documento-anexo-interno/documento-anexo-interno.component.html
+++ b/src/app/pages/tramite-documentario/documento-anexo-interno/documento-anexo-interno.component.html
@@ -87,12 +87,12 @@
 <ng-container *ngIf="screenAtencion && bandejaActiva == 'e'">
   <row-container>
     <span class="fs-16 fw-500 mg-bot-8">Atención Requerida:</span>
-    <div fxFlex="60" appearance="outline" class="mg-bot-8" color="primary">
+    <div fxFlex="60" appearance="outline" class="mat-sm" color="primary">
       <mat-form-field
         fxFlex="100"
         fxFlex.xs="auto"
         appearance="outline"
-        class="mg-bot-8"
+        class="mat-sm"
         color="primary"
       >
         <mat-label>Atención</mat-label>
@@ -179,7 +179,7 @@
       fxFlex="100"
       fxFlex.xs="auto"
       appearance="outline"
-      class="mg-bot-8"
+      class="mat-sm"
       color="primary"
     >
       <mat-label>Adjunte documento ...</mat-label>
@@ -402,13 +402,13 @@
 </table>
 <ng-container *ngIf="screenAprobacion && bandejaActiva == 'e'">
   <row-container>
-    <span class="fs-16 fw-500 mg-bot-8">Aprobación Requerida:</span>
-    <div fxFlex="60" appearance="outline" class="mg-bot-8" color="primary">
+    <span class="fs-16 fw-500 mat-sm">Aprobación Requerida:</span>
+    <div fxFlex="60" appearance="outline" class="mat-sm" color="primary">
       <mat-form-field
         fxFlex="100"
         fxFlex.xs="auto"
         appearance="outline"
-        class="mg-bot-8"
+        class="mat-sm"
         color="primary"
       >
         <mat-label>Aprobación</mat-label>
