--- a/src/app/pages/tramite-documentario/documento-detalle/documento-detalle.html
+++ b/src/app/pages/tramite-documentario/documento-detalle/documento-detalle.html
@@ -4,9 +4,10 @@
 <row-container>
   <mat-form-field
     [style.fontSize]="12"
+
     fxFlex="18"
     fxFlex.xs="auto"
-    class="mg-bot-8"
+    class="mat-sm"
     appearance="outline"
     color="primary"
   >
@@ -18,7 +19,7 @@
     [style.fontSize]="12"
     fxFlex="16"
     fxFlex.xs="auto"
-    class="mg-bot-8"
+    class="mat-sm"
     appearance="outline"
     color="primary"
   >
@@ -31,7 +32,7 @@
     [style.fontSize]="12"
     fxFlex="18"
     fxFlex.xs="auto"
-    class="mg-bot-8"
+    class="mat-sm"
     appearance="outline"
     color="primary"
   >
@@ -45,7 +46,7 @@
     fxFlex="18"
     fxFlex.xs="auto"
     appearance="outline"
-    class="mg-bot-8"
+    class="mat-sm"
     color="primary"
   >
     <mat-label>Tipo de Documento</mat-label>
@@ -68,7 +69,7 @@
     fxFlex="16"
     fxFlex.xs="auto"
     appearance="outline"
-    class="mg-bot-8"
+    class="mat-sm"
     color="primary"
   >
     <mat-label>Recepción</mat-label>
@@ -90,7 +91,7 @@
     fxFlex="calc(11% - 21px)"
     fxFlex.xs="auto"
     appearance="outline"
-    class="mg-bot-8"
+    class="mat-sm"
     color="primary"
   >
     <mat-label>Páginas</mat-label>
@@ -103,7 +104,7 @@
     fxFlex="60"
     fxFlex.xs="auto"
     appearance="outline"
-    class="mg-bot-8"
+    class="mat-sm"
     color="primary"
   >
     <mat-label>Remitente</mat-label>
@@ -114,7 +115,7 @@
     fxFlex="20"
     fxFlex.xs="auto"
     appearance="outline"
-    class="mg-bot-8"
+    class="mat-sm"
     color="primary"
   >
     <mat-label>Nro Documento</mat-label>
@@ -125,7 +126,7 @@
     fxFlex="20"
     fxFlex.xs="auto"
     appearance="outline"
-    class="mg-bot-8"
+    class="mat-sm"
     color="primary"
   >
     <mat-label>Nro Expediente</mat-label>
@@ -139,7 +140,7 @@
     fxFlex="25"
     fxFlex.xs="auto"
     appearance="outline"
-    class="mg-bot-8"
+    class="mat-sm"
     color="primary"
   >
     <mat-label>Fecha Documento</mat-label>
@@ -150,7 +151,7 @@
     fxFlex="25"
     fxFlex.xs="auto"
     appearance="outline"
-    class="mg-bot-8"
+    class="mat-sm"
     color="primary"
   >
     <mat-label>Recibido el</mat-label>
@@ -162,7 +163,7 @@
     fxFlex="25"
     fxFlex.xs="auto"
     appearance="outline"
-    class="mg-bot-8"
+    class="mat-sm"
     color="primary"
   >
     <mat-label>Fecha Vencimiento</mat-label>
@@ -178,7 +179,7 @@
     fxFlex="25"
     fxFlex.xs="auto"
     appearance="outline"
-    class="mg-bot-8"
+    class="mat-sm"
     color="primary"
   >
     <mat-label>Fecha Caducidad</mat-label>
@@ -194,7 +195,7 @@
 <mat-form-field
   [style.fontSize]="12"
   appearance="outline"
-  class="mg-bot-8 wd-full"
+  class="mat-tx wd-full"
   color="primary"
 >
   <mat-label>Asunto</mat-label>
