--- a/src/app/pages/tramite-documentario/documento-externo-reportes/documento-externo-reportes.component.html
+++ b/src/app/pages/tramite-documentario/documento-externo-reportes/documento-externo-reportes.component.html
@@ -89,6 +89,7 @@
               fxLayout.xs="column"
               fxLayoutAlign.xs="start"
               appearance="outline"
+              class="mat-sm"
             >
               <mat-label>Nro Expediente</mat-label>
               <input
@@ -102,6 +103,7 @@
             </mat-form-field>
 
             <mat-form-field
+              class="mat-sm"
               fxLayoutGap="8px"
               fxFlex="30"
               fxFlex.xs="auto"
@@ -118,6 +120,7 @@
             </mat-form-field>
             <mat-form-field
               fxFlex="30"
+              class="mat-sm"
               appearance="outline"
               fxLayoutGap="8px"
               fxFlex.xs="auto"
@@ -134,7 +137,7 @@
           </row-container>
           <row-container>
             <mat-form-field
-              class="espacio"
+              class="espacio mat-sm"
               fxFlex="32"
               appearance="outline"
               fxLayoutGap="8px"
@@ -151,6 +154,7 @@
             </mat-form-field>
             <mat-form-field
               fxFlex="30"
+              class="mat-sm"
               appearance="outline"
               fxLayoutGap="8px"
               fxFlex.xs="auto"
