--- a/src/app/pages/tramite-documentario/documento-interno-buscar/documento-interno-buscar.component.html
+++ b/src/app/pages/tramite-documentario/documento-interno-buscar/documento-interno-buscar.component.html
@@ -1,6 +1,7 @@
 <row-container [formGroup]="form">
   <mat-form-field *ngIf="group.value=='filtrar'"
                   fxFlex
+                  class="mat-sm"
                   appearance="outline"
                   color="primary">
     <input matInput
