--- a/src/app/pages/tramite-documentario/documento-interno-datos/documento-interno-datos.component.html
+++ b/src/app/pages/tramite-documentario/documento-interno-datos/documento-interno-datos.component.html
@@ -25,7 +25,7 @@
     <mat-form-field
       fxFlex="25"
       fxFlex.xs="auto"
-      class="mg-bot-8"
+      class="mat-sm"
       appearance="outline"
       color="primary"
     >
@@ -41,7 +41,7 @@
     <mat-form-field
       fxFlex="25"
       fxFlex.xs="auto"
-      class="mg-bot-8"
+      class="mat-sm"
       appearance="outline"
       color="primary"
     >
@@ -88,7 +88,7 @@
       fxFlex="25"
       fxFlex.xs="auto"
       appearance="outline"
-      class="mg-bot-8"
+      class="mat-sm"
       color="primary"
     >
       <mat-label>Tipo Correlativo</mat-label>
@@ -102,7 +102,7 @@
       fxFlex="25"
       fxFlex.xs="auto"
       appearance="outline"
-      class="mg-bot-8"
+      class="mat-sm"
       color="primary"
     >
       <mat-label>Recepción</mat-label>
@@ -140,7 +140,7 @@
       fxFlex="25"
       fxFlex.xs="auto"
       appearance="outline"
-      class="mg-bot-8"
+      class="mat-sm"
       color="primary"
     >
       <mat-label>Nro Expediente</mat-label>
@@ -157,7 +157,7 @@
       fxFlex="25"
       fxFlex.xs="auto"
       appearance="outline"
-      class="mg-bot-8"
+      class="mat-sm"
       color="primary"
     >
       <mat-label>Nro Documento</mat-label>
@@ -220,7 +220,7 @@
     <mat-form-field
       fxFlex="30"
       appearance="outline"
-      class="mg-bot-8"
+      class="mat-sm"
       color="primary"
     >
       <mat-label>Fecha Documento</mat-label>
@@ -241,7 +241,7 @@
     (changeValorizaciones)="numeroValorizaciones = $event"
   >
   </valorizacion-contabilidad>
-  <mat-form-field appearance="outline" color="primary">
+  <mat-form-field class="mat-tx" appearance="outline" color="primary">
     <mat-label>Asunto</mat-label>
     <textarea
       matInput
