--- a/src/app/pages/tramite-documentario/documento-interno-derivar/documento-interno-derivar.component.html
+++ b/src/app/pages/tramite-documentario/documento-interno-derivar/documento-interno-derivar.component.html
@@ -29,7 +29,7 @@
         fxFlex="100"
         fxFlex.xs="auto"
         appearance="outline"
-        class="mg-bot-8"
+        class="mat-sm"
         color="primary"
       >
         <mat-label class="destinatario">Destinatario</mat-label>
