--- a/src/app/pages/tramite-documentario/documento-interno-reportes/documento-interno-reportes.component.html
+++ b/src/app/pages/tramite-documentario/documento-interno-reportes/documento-interno-reportes.component.html
@@ -61,7 +61,7 @@
             <mat-radio-button
               fxFlex="15"
               fxFlex.xs="auto"
-              class="mg-bot-8"
+              class="mat-sm"
               appearance="outline"
               color="primary"
               value="0"
@@ -70,7 +70,7 @@
             <mat-form-field
               fxFlex="40"
               fxFlex.xs="auto"
-              class="mg-bot-8"
+              class="mat-sm"
               appearance="outline"
               color="primary"
             >
@@ -94,7 +94,7 @@
             <mat-radio-button
               fxFlex="15"
               fxFlex.xs="auto"
-              class="mg-bot-8"
+              class="mat-sm"
               appearance="outline"
               color="primary"
               value="1"
@@ -139,7 +139,7 @@
               fxFlex="25"
               fxFlex.xs="auto"
               appearance="outline"
-              class="mg-bot-8"
+              class="mat-sm"
               color="primary"
             >
               <mat-label>Tipo Correlativo</mat-label>
