--- a/src/app/pages/tramite-documentario/documento-interno-vb/documento-interno-vb.component.html
+++ b/src/app/pages/tramite-documentario/documento-interno-vb/documento-interno-vb.component.html
@@ -32,7 +32,7 @@
         fxFlex="22"
         fxFlex.xs="auto"
         appearance="outline"
-        class="mg-bot-8 aprobacion"
+        class="mat-sm aprobacion"
         color="primary"
       >
         <mat-label>Tipo Aprobacion</mat-label>
