--- a/src/app/pages/tramite-documentario/documento-interno-visor/documento-interno-visor.component.html
+++ b/src/app/pages/tramite-documentario/documento-interno-visor/documento-interno-visor.component.html
@@ -26,7 +26,7 @@
       <mat-form-field
         fxFlex="60"
         appearance="outline"
-        class="mg-bot-8"
+        class="mat-sm"
         color="primary">
         <mat-label>Proveido Documento</mat-label>
         <textarea
@@ -40,7 +40,7 @@
         *ngIf="data.nombreDerivacion; else razon"
         fxFlex="40"
         appearance="outline"
-        class="mg-bot-8"
+        class="mat-sm"
         color="primary">
         <mat-label>Razón Firma</mat-label>
         <input matInput
@@ -52,7 +52,7 @@
         *ngIf="data.estadoDerivacion !='FD'"
         fxFlex="40"
         appearance="outline"
-        class="mg-bot-8"
+        class="mat-sm"
         color="primary">
         <mat-label>Razón Firma</mat-label>
         <mat-select formControlName="razon">
