--- a/src/app/pages/tramite-documentario/documento-nuevo-datos/documento-nuevo-datos.component.html
+++ b/src/app/pages/tramite-documentario/documento-nuevo-datos/documento-nuevo-datos.component.html
@@ -17,7 +17,7 @@
     <mat-form-field
       fxFlex="18"
       fxFlex.xs="auto"
-      class="mg-bot-8"
+      class="mat-sm"
       appearance="outline"
       color="primary"
     >
@@ -38,7 +38,7 @@
     <mat-form-field
       fxFlex="18"
       fxFlex.xs="auto"
-      class="mg-bot-8"
+      class="mat-sm"
       appearance="outline"
       color="primary"
     >
@@ -55,7 +55,7 @@
     <mat-form-field
       fxFlex="20"
       fxFlex.xs="auto"
-      class="mg-bot-8"
+      class="mat-sm"
       appearance="outline"
       color="primary"
     >
@@ -72,7 +72,7 @@
     <mat-form-field
       fxFlex="20"
       fxFlex.xs="auto"
-      class="mg-bot-8"
+      class="mat-sm"
       appearance="outline"
       color="primary"
     >
@@ -88,7 +88,7 @@
       fxFlex="20"
       fxFlex.xs="auto"
       appearance="outline"
-      class="mg-bot-8"
+      class="mat-sm"
       color="primary"
     >
       <mat-label>Recepción</mat-label>
@@ -118,7 +118,7 @@
       fxFlex="25"
       fxFlex.xs="auto"
       appearance="outline"
-      class="mg-bot-8"
+      class="mat-sm"
       color="primary"
     >
       <mat-label>Nro Documento</mat-label>
@@ -135,7 +135,7 @@
       fxFlex="25"
       fxFlex.xs="auto"
       appearance="outline"
-      class="mg-bot-8"
+      class="mat-sm"
       color="primary"
     >
       <mat-label>Nro Expediente</mat-label>
@@ -152,7 +152,7 @@
       fxFlex="25"
       fxFlex.xs="auto"
       appearance="outline"
-      class="mg-bot-8"
+      class="mat-sm"
       color="primary"
     >
       <mat-label>Páginas</mat-label>
@@ -168,7 +168,7 @@
     <mat-form-field
       fxFlex="25"
       appearance="outline"
-      class="mg-bot-8"
+      class="mat-sm"
       color="primary"
     >
       <mat-label>Fecha Documento</mat-label>
@@ -190,7 +190,7 @@
     <mat-form-field
       fxFlex="calc(33% - 6px)"
       appearance="outline"
-      class="mg-bot-8"
+      class="mat-sm"
       color="primary"
     >
       <mat-label>Recibido el</mat-label>
