--- a/src/app/pages/tramite-documentario/reporte-filtro/reporte-filtro.component.html
+++ b/src/app/pages/tramite-documentario/reporte-filtro/reporte-filtro.component.html
@@ -32,6 +32,7 @@
   <mat-form-field fxFlex
                 [style.width]="'250px'"
                   appearance="outline"
+                  class="mat-sm"
                   color="primary">
       <mat-label>Fecha y Hora</mat-label>
             <input matInput placeholder="Click para indicar hora y fecha"
