--- a/src/app/pages/tramite-documentario/reporte-memo/reporte-memo.component.html
+++ b/src/app/pages/tramite-documentario/reporte-memo/reporte-memo.component.html
@@ -19,7 +19,7 @@
       <mat-form-field
         fxFlex="60"
         appearance="outline"
-        class="mg-bot-8"
+        class="mat-sm"
         color="primary">
         <mat-label>Descripción Documento</mat-label>
         <textarea
@@ -32,7 +32,7 @@
       <mat-form-field
         fxFlex="40"
         appearance="outline"
-        class="mg-bot-8"
+        class="mat-sm"
         color="primary">
         <mat-label>Razón Firma</mat-label>
         <mat-select formControlName="razon">
