--- a/src/app/pages/tramite-documentario/valorizacion-contabilidad/valorizacion-contabilidad.component.html
+++ b/src/app/pages/tramite-documentario/valorizacion-contabilidad/valorizacion-contabilidad.component.html
@@ -17,7 +17,7 @@
         <mat-form-field fxFlex="70"
                         fxFlex.xs="auto"
                         appearance="outline"
-                        class="mg-bot-8"
+                        class="mat-sm"
                         color="primary">
             <mat-label>Razón Social</mat-label>
              <input matInput
@@ -30,7 +30,7 @@
         <mat-form-field fxFlex="30"
                         fxFlex.xs="auto"
                         appearance="outline"
-                        class="mg-bot-8"
+                        class="mat-sm"
                         color="primary">
             <mat-label>RUC</mat-label>
              <input matInput
@@ -45,7 +45,7 @@
             <mat-form-field fxFlex="70"
                             fxFlex.xs="auto"
                             appearance="outline"
-                            class="mg-bot-8"
+                            class="mat-sm"
                             color="primary">
                 <mat-label> Descripción del Contrato</mat-label>
                  <input matInput
@@ -58,7 +58,7 @@
             <mat-form-field fxFlex="30"
                             fxFlex.xs="auto"
                             appearance="outline"
-                            class="mg-bot-8"
+                            class="mat-sm"
                             color="primary">
                 <mat-label>Monto</mat-label>
                  <input matInput
@@ -74,14 +74,14 @@
 			<div fxLayout="row"
         fxLayoutAlign="start center"
         fxLayoutGap="8px"
-        class="mg-bot-8">
+        class="mat-sm">
      <span class="fs-16 fw-500">Valorizaciones</span>
    </div>
      <row-container>
       <mat-form-field fxFlex="30"
                       fxFlex.xs="auto"
                       appearance="outline"
-                      class="mg-bot-8"
+                      class="mat-sm"
                       color="primary">
       <mat-label>Serie Numero</mat-label>
       <input matInput
@@ -93,7 +93,7 @@
       <mat-form-field fxFlex="30"
                       fxFlex.xs="auto"
                       appearance="outline"
-                      class="mg-bot-8"
+                      class="mat-sm"
                       color="primary">
       <mat-label>Importe</mat-label>
       <input matInput
@@ -107,7 +107,7 @@
       <mat-form-field fxFlex="30"
                       fxFlex.xs="auto"
                       appearance="outline"
-                      class="mg-bot-8"
+                      class="mat-sm"
                       color="primary">
       <mat-label>HES</mat-label>
       <input matInput
@@ -184,11 +184,11 @@
              fxLayout="row"
              fxLayoutAlign="end center"
              fxLayoutGap="4px"
-             class="mg-bot-8">
+             class="mat-sm">
             <mat-checkbox #chkFondo
                           [disabled] = "guardado"></mat-checkbox>
                 <mat-form-field appearance="outline"
-                            class="mg-bot-8"
+                            class="mat-sm"
                             color="primary">
                 <mat-label>Fondo de Garantía</mat-label>
                  <input matInput
@@ -205,10 +205,10 @@
              fxLayout="row"
              fxLayoutAlign="end center"
              fxLayoutGap="4px"
-             class="mg-bot-8">
+             class="mat-sm">
             <mat-checkbox #chkAlquiler [disabled] = "guardado" ></mat-checkbox>
             <mat-form-field appearance="outline"
-                            class="mg-bot-8"
+                            class="mat-sm"
                             color="primary">
                 <mat-label>Alquiler</mat-label>
                  <input matInput
@@ -225,12 +225,12 @@
              fxLayout="row"
              fxLayoutAlign="end center"
              fxLayoutGap="4px"
-             class="mg-bot-8">
+             class="mat-sm">
             <mat-checkbox #chkPenalidad
                           [disabled] = "guardado" ></mat-checkbox>
 
             <mat-form-field appearance="outline"
-                            class="mg-bot-8"
+                            class="mat-sm"
                             color="primary">
                 <mat-label>Penalidad</mat-label>
                  <input matInput
