--- a/src/app/@core/auth/mesa-anexo/mesa-anexo.component.html
+++ b/src/app/@core/auth/mesa-anexo/mesa-anexo.component.html
@@ -7,7 +7,7 @@
       <mat-form-field fxFlex="100"
           fxFlex.xs="auto"
           appearance="outline"
-          class="mg-bot-8"
+          class="mat-sm"
           color="primary">
           <mat-label>Adjunte documento ...</mat-label>
           <input matInput
@@ -35,7 +35,7 @@
      fxLayoutAlign="start center"
      fxLayoutGap="8px"
      class="mg-bot-8">
-    <button mat-icon-button 
+    <button mat-icon-button
             matTooltip="Eliminar"
             type="button"
             (click)="eliminar(-1)"
@@ -83,7 +83,7 @@
     <td mat-cell
         *matCellDef="let e; let i = index">
       <div>
-        <button mat-icon-button 
+        <button mat-icon-button
                 matTooltip="Eliminar"
                 (click)="eliminar(i)"
                 type="button">
