--- a/src/app/pages/tramite-documentario/documento-interno-filtro/documento-interno-filtro.component.html
+++ b/src/app/pages/tramite-documentario/documento-interno-filtro/documento-interno-filtro.component.html
@@ -3,11 +3,11 @@
           fxLayoutGap="16px"
           fxLayout.xs="column"
           fxLayoutAlign.xs="start">
- 
+
      <!--Filtro de Usuario de Bandeja-->
      <mat-form-field fxFlex="22"
                         fxFlex.xs="auto"
-                        class="mg-bot-8"
+                        class="mat-sm"
                         appearance="outline"
                         color="primary">
             <mat-label>Buzones de Usuario</mat-label>
@@ -23,6 +23,7 @@
   <!--Bandejas del usuario-->
   <mat-form-field fxFlex="22"
                   appearance="outline"
+                  class="mat-sm"
                   color="primary">
     <mat-label>Bandeja</mat-label>
     <mat-select placeholder="Bandeja"
@@ -66,7 +67,7 @@
         matTooltip="Bandeja de externos"
         (click)="openExternos()">{{externos}}
     </button>-->
-    <button 
+    <button
         [ngClass]="{'pulse-inactive': externos === '0', 'pulse-button': true}"
         *ngIf="externos"
         matTooltip="Bandeja de externos"
@@ -78,7 +79,7 @@
 
 
 <!-- Orden de Restriccion -->
-<!-- 0- sin permiso 
+<!-- 0- sin permiso
      1- lectura
      2- derivar y atender
      3- derivar y atender y crear nuevo documento -->
