--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -38,6 +38,8 @@ mat.$theme-ignore-duplication-warnings: true;
 //clases tema
 @import "class-theme";
 
+@import "../../src/scss/themes/elements/menu-item-them.scss";
+
 @mixin snackbar-cargando-app-theme($theme) {
   $primary: map.get($theme, primary);
   $accent: map.get($theme, accent);
@@ -72,6 +74,8 @@ mat.$theme-ignore-duplication-warnings: true;
 
   //clases
   @include class-theme($theme);
+
+  @include menu-item-theme($theme);
 }
 
 .default-theme {
