--- a/src/scss/themes/default-theme.scss
+++ b/src/scss/themes/default-theme.scss
@@ -53,9 +53,15 @@ $app-default-theme: mat.define-light-theme(
 
 .mat-mdc-text-field-wrapper {
   flex: none !important;
-  height: 50px !important;
+  // height: 50px !important;
+}
+.mat-sm > .mat-mdc-text-field-wrapper .mat-mdc-form-field-flex {
+  height: 45px !important;
 }
 
+.mat-tx > .mat-mdc-text-field-wrapper .mat-mdc-form-field-flex {
+  height: 65px !important;
+}
 // .mat-mdc-text-field-wrapper {
 //   // height: 50px !important;
 //   display: flex !important;
