--- a/src/app/pages/tramite-documentario/bandeja/bandeja.component.html
+++ b/src/app/pages/tramite-documentario/bandeja/bandeja.component.html
@@ -53,7 +53,7 @@
                    <li *ngFor="let l of element.listaAtendido">
                        <span [style.color]="getColores(l.estiloCelda)"
                              style="font-weight: bold">
-                              {{l.fechaDerivacion + l.estiloCelda}}
+                              {{l.fechaDerivacion}}
                             <mat-icon *ngIf="element.leido==1"
                                       [matTooltip]="msgs.leido + l.fechaLeido"
                                       [style.color]="color">{{icons.leido}}</mat-icon>
