--- a/src/app/@shared/chips-autocomplete/chips-autocomplete.component.html
+++ b/src/app/@shared/chips-autocomplete/chips-autocomplete.component.html
@@ -1,29 +1,33 @@
-<mat-form-field class="chip-list"
-                appearance="outline">
-  <mat-label>{{matLabel}}</mat-label>
-  <mat-chip-listbox #chipList>
-    <mat-chip-option *ngFor="let object of objects"
-              [selectable]="selectable"
-              [removable]="removable"
-              (removed)="remove(object)">
-      {{object[nameObject]}}
-      <mat-icon matChipRemove
-                *ngIf="removable">cancel</mat-icon>
+<mat-form-field class="chip-list" appearance="outline">
+  <mat-label>{{ matLabel }}</mat-label>
+  <mat-chip-grid #chipGrid>
+    <mat-chip-option
+      *ngFor="let object of objects"
+      [selectable]="selectable"
+      [removable]="removable"
+      (removed)="remove(object)"
+    >
+      {{ object[nameObject] }}
+      <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
     </mat-chip-option>
-    <input matInput #objectInput
-           [formControl]="objectControl"
-           [matAutocomplete]="auto"
-           >
-           <!-- [matChipInputFor]="chipList"
+    <input
+      matInput
+      #objectInput
+      [formControl]="objectControl"
+      [matAutocomplete]="auto"
+      [matChipInputFor]="chipGrid"
+      [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+      [matChipInputAddOnBlur]="addOnBlur"
+      (matChipInputTokenEnd)="add($event)"
+    />
+    <!-- [matChipInputFor]="chipList"
            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
            [matChipInputAddOnBlur]="addOnBlur"
            (matChipInputTokenEnd)="add($event)" -->
-  </mat-chip-listbox>
-  <mat-autocomplete #auto="matAutocomplete"
-                    (optionSelected)="selected($event)">
-    <mat-option *ngFor="let object of filteredObjects | async"
-                [value]="object">
-      {{object[object.indexOf(nameObject)]}}//--- object[nameObject]
+  </mat-chip-grid>
+  <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+    <mat-option *ngFor="let object of filteredObjects | async" [value]="object">
+      {{ object[object.indexOf(nameObject)] }}//--- object[nameObject]
     </mat-option>
   </mat-autocomplete>
 </mat-form-field>
